feat(log in and sign up pages, error 404 page)

--- a/src/app/folder/folder.component.scss
+++ b/src/app/folder/folder.component.scss
@@ -1,7 +1,9 @@
 .main-container {
+  user-select: none;
   display: inline-block;
   width: 100px;
   margin: 10px;
+  background-color: transparent;
   p {
     white-space: nowrap;
     overflow: hidden;
