--- a/src/app/folder/folder.component.html
+++ b/src/app/folder/folder.component.html
@@ -1,4 +1,4 @@
-<div class="main-container">
+<div draggable="true" class="main-container">
   <i class="fas fa-folder"></i>
   <p>{{ folder.name }}</p>
 </div>
