--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -4,13 +4,22 @@
   padding: 0;
   margin: 0;
   max-width: none;
-  .row {
+  overflow: hidden;
+  supfile-toolbar {
+    position: fixed;
+    z-index: 100;
+    left: calc(25% + 15px);
+    top: 0;
+    width: calc(100% - 25%);
+  }
+  .main-content.row {
     height: 100%;
     .left-pane {
       height: 100%;
     }
     .folder-grid {
-      padding: 20px;
+      padding: 40px 20px 20px 20px;
+      overflow-y: auto;
     }
   }
 }
