--- a/src/app/folder/folder.component.scss
+++ b/src/app/folder/folder.component.scss
@@ -5,6 +5,7 @@
   margin: 10px;
   background-color: transparent;
   position: relative;
+  transition: 200ms ease-in;
   animation: enterAnimation 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s 1;
   p {
     white-space: nowrap;
