--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,19 +3,19 @@
     <form (ngSubmit)="onSubmit($event)" #signupForm="ngForm">
       <div class="form-group">
         <label for="username">Username</label>
-        <input type="text" class="form-control" id="username" placeholder="Enter your username">
+        <input type="text" [(ngModel)]="username" class="form-control" id="username" name="username" placeholder="Enter your username">
       </div>
       <div class="form-group">
         <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" placeholder="Enter email">
+        <input type="email" [(ngModel)]="email" class="form-control" id="email" name="email" placeholder="Enter email">
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" class="form-control" id="password" placeholder="Password">
+        <input type="password" [(ngModel)]="password" class="form-control" id="password" name="password" placeholder="Password">
       </div>
       <div class="form-group">
         <label for="confirmPassword">Confirm password</label>
-        <input type="password" class="form-control" id="confirmPassword" placeholder="Same password">
+        <input type="password" [(ngModel)]="confirmPassword" class="form-control" name="confirmPassword" id="confirmPassword" placeholder="Same password">
       </div>
       <button type="submit" class="btn btn-primary">Sign up</button>
       <button type="button" class="btn btn-primary secondary-btn" (click)="logIn()">I already have an account</button>
