--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container main-container">
-  <supfile-toolbar (onCreateNewFolder)="createFolder()"></supfile-toolbar>
+  <supfile-toolbar (onCreateNewFolder)="createFolder()" (newFilesAdded)="onFilesAdded($event)"></supfile-toolbar>
   <div class="row main-content">
     <div class="col-3 left-pane">
       <supfile-menu></supfile-menu>
