--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -14,6 +14,7 @@
   }
   .main-content.row {
     height: 100%;
+    position: relative;
     .left-pane {
       height: 100%;
     }
@@ -21,6 +22,17 @@
       padding: 40px 20px 20px 20px;
       overflow-y: auto;
       transition: 200ms ease-in;
+    }
+    .progress {
+      position: absolute;
+      width: 75%;
+      height: 30px;
+      bottom: 0;
+      left: calc(25% - 15px);
+      border-radius: 0;
+      .progress-bar {
+        background-color: #44bf65;
+      }
     }
   }
 }
