--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -5,6 +5,7 @@
   padding: 40px 20px;
   user-select: none;
   position: relative;
+  box-shadow: 3px 0px 15px rgba(0, 0, 0, 0.175);
   .sign-out-btn,
   .settings-btn {
     transition: 200ms ease-in;
