--- a/src/app/file/file.component.scss
+++ b/src/app/file/file.component.scss
@@ -7,10 +7,10 @@
   position: relative;
   transition: 200ms ease-in;
   cursor: pointer;
+  animation: enterAnimation 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s 1;
   &:active {
     transform: scale(0.9);
   }
-  animation: enterAnimation 600ms cubic-bezier(0.175, 0.885, 0.32, 1.275) 0s 1;
   p {
     white-space: nowrap;
     overflow: hidden;
@@ -44,6 +44,7 @@
     top: 40%;
     left: 40%;
     background-color: rgb(88, 102, 124);
+    z-index: 1000;
     ul {
       list-style-type: none;
       padding: 0;
