--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,12 @@
     </div>
     <div class="col-9 folder-grid">
       <supfile-folder *ngFor="let folder of folders" (onRemove)="removeFolder(folder)" [folder]="folder"></supfile-folder>
+      <supfile-file *ngFor="let file of files" (onRemove)="removeFile(file)" [file]="file"></supfile-file>
+
+    </div>
+    <div *ngIf="inProgress" class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="100" aria-valuemin="0"
+        aria-valuemax="100" style="width: 100%"></div>
     </div>
   </div>
 </div>
