--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Sign in</button>
       <button type="button" class="btn btn-primary secondary-btn" (click)="signUp()">I don't have an account</button>
-			<button id="google" class="g-signin2 btn btn-primary secondary-btn" data-onsuccess="onSignIn" ></button>
+			<div id="googlelogin" class="g-signin2" >Google</div>
     </form>
   </div>
 </div>
