--- a/src/app/file/file.component.scss
+++ b/src/app/file/file.component.scss
@@ -45,6 +45,7 @@
     left: 40%;
     background-color: rgb(88, 102, 124);
     z-index: 1000;
+    width: 150px;
     ul {
       list-style-type: none;
       padding: 0;
