--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -1,20 +1,43 @@
 .main-container {
   width: 100%;
-  height: 50px;
+  height: 60px;
   background-color: white;
-  button {
+  position: relative;
+  .actions {
+    display: inline-block;
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    button {
+      display: inline-block;
+      background-color: transparent;
+      border: none;
+      outline: transparent;
+      margin: 10px 20px 10px 0;
+      cursor: pointer;
+      i {
+        color: #adadad;
+        font-size: 25px;
+      }
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+  }
+  nav {
     display: inline-block;
     background-color: transparent;
-    border: none;
-    outline: transparent;
-    margin: 10px 20px 10px 0;
-    cursor: pointer;
-    i {
-      color: #adadad;
-      font-size: 25px;
-    }
-    &:active {
-      transform: scale(0.9);
+    ol {
+      background-color: transparent;
+      padding-left: 5px;
+      li {
+        a {
+          color: #5f7497;
+        }
+        span {
+          color: rgb(121, 121, 121);
+        }
+      }
     }
   }
 }
