--- a/src/app/file-viewer/file-viewer.component.scss
+++ b/src/app/file-viewer/file-viewer.component.scss
@@ -1,9 +1,84 @@
-video,
-img {
+.main-container {
   width: 100%;
   height: 100%;
-}
-
-p {
-  white-space: pre-wrap;
+  position: relative;
+  overflow: hidden;
+  background-color: rgb(236, 236, 236);
+  .title-bar {
+    user-select: none;
+    height: 50px;
+    width: 100%;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: 0;
+    box-shadow: 2px 0px 20px 1px rgba(0, 0, 0, 0.175);
+    z-index: 10;
+    h1 {
+      display: inline-block;
+      max-width: 50%;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
+      font-size: 20px;
+      padding: 12px;
+      font-weight: 300;
+      color: #909090;
+      margin-left: 10px;
+    }
+    .actions {
+      display: inline-block;
+      float: right;
+      button {
+        display: inline-block;
+        background-color: transparent;
+        border: none;
+        outline: transparent;
+        margin: 10px 20px 10px 0;
+        cursor: pointer;
+        i {
+          color: #adadad;
+          font-size: 25px;
+        }
+        &:active {
+          transform: scale(0.9);
+        }
+      }
+    }
+  }
+  .viewer {
+    overflow-y: auto;
+    position: relative;
+    display: flex;
+    margin-top: 50px;
+    height: calc(100% - 50px);
+    video,
+    img {
+      background-color: black;
+      margin: auto;
+      width: 100%;
+      max-height: 100%;
+    }
+    p {
+      white-space: pre-wrap;
+      padding: 20px;
+      color: rgb(61, 61, 61);
+    }
+    .open-file {
+      cursor: pointer;
+      margin: auto;
+      text-align: center;
+      color: rgb(146, 146, 146);
+      font-size: 100px;
+      p {
+        font-size: 20px;
+        padding: 0;
+        margin: 0;
+        color: rgb(146, 146, 146);
+      }
+      &:active {
+        transform: scale(0.9);
+      }
+    }
+  }
 }
