misc(improve context menu)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
       <supfile-menu></supfile-menu>
     </div>
     <div class="col-9 folder-grid">
-      <supfile-folder *ngFor="let folder of folders" (fileDropped)="onFileMoved($event)" (folderDropped)="onFolderMoved($event)"
-        (onRemove)="removeFolder(folder)" [folder]="folder"></supfile-folder>
-      <supfile-file *ngFor="let file of files" (onRemove)="removeFile(file)" [file]="file"></supfile-file>
+      <supfile-folder *ngFor="let folder of folders; let j = index;" (fileDropped)="onFileMoved($event)" (folderDropped)="onFolderMoved($event)"
+        (onRemove)="removeFolder(folder)" [folder]="folder" [index]="folders.length - j + (files ? files.length : 0)"></supfile-folder>
+      <supfile-file *ngFor="let file of files; let i = index;" (onRemove)="removeFile(file)" [index]="files.length - i" [file]="file"></supfile-file>
 
     </div>
     <div *ngIf="inProgress" class="progress">
