--- a/src/app/file/file.component.html
+++ b/src/app/file/file.component.html
@@ -1,16 +1,16 @@
-<div [@inOutFileAnim]="fileState" (@inOutFileAnim.done)="onHidingFileDone()" draggable="true" (click)="onFileClicked()" class="main-container"
-  (dragstart)="onDrag($event)" (contextmenu)="onContextMenuShown($event)">
+<div [style.z-index]="index + 1" [@inOutFileAnim]="fileState" (@inOutFileAnim.done)="onHidingFileDone()" draggable="true"
+  (click)="onFileClicked()" class="main-container" (dragstart)="onDrag($event)" (contextmenu)="onContextMenuShown($event)">
   <i class="fas fa-file"></i>
   <p *ngIf="!file.isInEditMode">{{ file.name }}</p>
   <input *ngIf="file.isInEditMode" type="text" [(ngModel)]="file.name" class="form-control" placeholder="Name the file" (keyup.enter)="leaveEditMode()">
-  <div class="context-menu" *ngIf="isContextMenuVisible">
+  <div class="context-menu" (click)="onContextMenuClick($event)" *ngIf="isContextMenuVisible">
     <ul>
-      <li *ngIf="isPublic" (click)="copyPublicLink()">Copy public link</li>
-      <li (click)="isPublic ? stopSharingFile() : shareFile()">
+      <li *ngIf="isPublic" (click)="copyPublicLink($event)">Copy public link</li>
+      <li (click)="isPublic ? stopSharingFile($event) : shareFile($event)">
         {{ isPublic ? 'Make private' : 'Share publicly' }}
       </li>
-      <li (click)="removeFile()">Remove</li>
-      <li (click)="editName()">Rename</li>
+      <li (click)="removeFile($event)">Remove</li>
+      <li (click)="editName($event)">Rename</li>
     </ul>
   </div>
   <input #publicLinkInput id="publicLinkInput" type="text" style="display: none;" [(ngModel)]="publicLink" />
