--- a/src/app/folder/folder.component.scss
+++ b/src/app/folder/folder.component.scss
@@ -44,6 +44,7 @@
     top: 40%;
     left: 40%;
     background-color: rgb(88, 102, 124);
+    width: 160px;
     ul {
       list-style-type: none;
       padding: 0;
