--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,6 +22,7 @@
       padding: 60px 20px 20px 20px;
       overflow-y: auto;
       transition: 200ms ease-in;
+      position: relative;
     }
     .progress {
       position: absolute;
