feat(presentation page)

--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -1,7 +1,7 @@
 .main-container {
   height: 100%;
   width: 100%;
-  background-color: rgb(88, 102, 124);
+  background-color: #58667c;
   padding: 40px 20px;
   user-select: none;
   position: relative;
