fix(issue with Google sign in)

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -13,6 +13,6 @@
       <button type="submit" class="btn btn-primary">Sign in</button>
       <button type="button" class="btn btn-primary secondary-btn" (click)="signUp()">I don't have an account</button>
     </form>
-    <button id="googlelogin" class=" btn btn-primary">Google</button>
+    <button id="googlelogin" class="btn btn-primary">Sign in with Google</button>
   </div>
 </div>
