--- a/src/app/file-viewer/file-viewer.component.scss
+++ b/src/app/file-viewer/file-viewer.component.scss
@@ -56,7 +56,8 @@
     img {
       background-color: black;
       margin: auto;
-      width: 100%;
+      max-width: 100%;
+      height: auto;
       max-height: 100%;
     }
     p {
